CloudFormation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Proyecto AWS con VPC, EC2, S3, y DynamoDB'

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: proyecto-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: proyecto-igw

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: '!Ref InternetGateway'
      VpcId: '!Ref VPC'

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: '!Ref VPC'
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: proyecto-subnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: '!Ref VPC'
      Tags:
        - Key: Name
          Value: proyecto-route-table

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: '!Ref PublicRouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: '!Ref InternetGateway'

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: '!Ref PublicRouteTable'
      SubnetId: '!Ref PublicSubnet'

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "allow_web_traffic"
      GroupDescription: "Allow inbound web traffic"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      VpcId: '!Ref VPC'

  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0fec2c2e2017f4e7b
      InstanceType: t2.micro
      KeyName: '!Ref KeyName'
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet: 
            - '!Ref WebServerSecurityGroup'
          SubnetId: '!Ref PublicSubnet'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update
          apt-get install -y apache2 php libapache2-mod-php
          systemctl enable apache2
          systemctl start apache2
          echo "<?php echo 'Hola Mundo!'; ?>" > /var/www/html/index.php
      Tags:
        - Key: Name
          Value: proyecto-ec2

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "${AWS::AccountId}-proyecto-bucket"

  DynamoDBTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: Pages
      BillingMode: PAY_PER_REQUEST
      AttributeDefinitions:
        - AttributeName: page_id
          AttributeType: S
        - AttributeName: page_name
          AttributeType: S
      KeySchema:
        - AttributeName: page_id
          KeyType: HASH
      GlobalSecondaryIndexes:
        - IndexName: PageNameIndex
          KeySchema:
            - AttributeName: page_name
              KeyType: HASH
          Projection:
            ProjectionType: ALL

Outputs:
  WebServerPublicIP:
    Description: Public IP address of the web server
    Value: '!GetAtt WebServerInstance.PublicIp'
  S3BucketName:
    Description: Name of the S3 bucket
    Value: '!Ref S3Bucket'
  DynamoDBTableName:
    Description: Name of the DynamoDB table
    Value: '!Ref DynamoDBTable'
